# DevBox-Test

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: macos-amd.yml  macos-universal.yml  macos-x86_64.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
workflows-bak/: release.yml
