[package]
name = "DevBox"
version = "0.0.1"
description = "开发者工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
incremental = true
opt-level = 'z' # 0-3
lto=true
codegen-units = 1
panic = 'abort'
# strip = "debuginfo"
strip = true
# upx -9 bin # 可使文件更小

[profile.dev]
opt-level = 0
incremental = true
